[package]
name = "bumpkin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maud = "0.24.0"
orgize = { git = "https://github.com/jaderebrasil/orgize.git" , features = ["syntect"] }
seahash = "4.1.0"
tempfile = "3.3.0"
